--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: dart pub get
       - name: Run pub
-        run: dart run lib/main.dart
+        run: dart run bin/main.dart
 
   # ...deployment-specific steps
   # test:
